<resources>
    <string name="app_name">Android_tutorial</string>
    <string name="about_us">This app helps its users to learn Android –the latest technology poping in todays world by providing the expert tutorials with 24*7 coding support.\nAs mobile apps has become more pervasive,user are looking for relevant information which our app is providing to its users.\n\nIt helps in learning the concept of programming from basic to advance.\n
It provides:\n
1.Android tutorials\n
2.Interview Questions\n
3.Android Assignments\n
4.Android Quiz\nLearn do earn,by getting expertisation in Android Tecnology by using Android Tutorial App.\n\n\nDeveloped by – \n
AL ARAF RABBY\nB.SC in CSE\nGMAIL:alrabbyjoyprince5@gmail.com\n
</string>
    <string name="title_send_feedback">Send feedback</string>
    <string name="mail_feedback_email">alrabbyjoyprince5@gmail.com</string>
    <string name="mail_feedback_subject">Feedback on this app</string>
    <string name="mail_feedback_message">Hi,
\n\nYour Feedback android tutorial app rocks! I would like to give you some feedback:</string>
    <string name="inter1">  1.Implement a life cycle of an android application using toast.\n\n
2.Implement a simple calculator using button action listener. .\n\n
3.Create an application which implement data transfer between activities. .\n\n
4.Create an application which implements multiple spinners dependent on each other. .\n\n
5.Create an application which loads multiple layouts using dynamic XML. .\n\n
6. Create an application which shows a list of name and images together. .\n\n
7. Create an application which shows images in grid view. When you long press on image it will show you two options remove and zoom the image on another activity.When you touch on remove from grid view. .\n\n
8. Create an application which shows you list of name and age together when you click on the add option menu the another dialog box open fill the details and when you press ok it will load in the list view. .\n\n
9.Create a service that when called store missed calls on in database. .\n\n
10.Create a service that executes when there is change in location and store the location and store the location in database with following fields -: id ,latitude , longitude and time. .\n\n
</string>
    <string name="inter2">  11. Create an application which plays an audio and video file. \n\n
12.Create a service that execute every time when system boot complets and send user GPS location to a specific mobile no. \n\n
13.Develope an application that store SMS from particular number in your own database. \n\n
14. Create a service that execute 5 min and capture the current camera picture store it in my data foulder in  SDCard.The picture name should be dd_mm_yy-hh_mm.jpeg. \n\n
15. Create an application which shows you a grid of image .When you click on image it will rotate for 1 second. \n\n
16. Create an application which implements shared preference. \n\n
17.Create an application which capture and save its picture on file when a user enter wrong password on mobile. \n\n
18. Create an application with the help of servlet to maintain the Employee details. \n\n
19.Create SMS sending Application using Custom Dialog Box. \n\n
20. Create an application store data in SQLite database and send data one activity to another activity. \n\n
</string>
    <string name="s1"> A service is a component that runs in the background to perform long-running operations without needing to interact with the user and it works even if application is destroyed. A service can essentially take two states –</string>
    <string name="s2"> A service has life cycle callback methods that you can implement to monitor changes in the services state and you can perform work at the appropriate stage. The following diagram on the left shows the life cycle when the service is created with startService() and the diagram on the right shows the life cycle when the service is created with bindService(): (image courtesy : android.com </string>
    <string name="service3"> To create an service, you create a Java class that extends the Service base class or one of its existing subclasses. The Service base class defines various callback methods and the most important are given below. You dont need to implement all the callbacks methods. However, its important that you understand each one and implement those that ensure your app behaves the way users expect.</string>
    <string name="service4"> Example
This example will take you through simple steps to show how to create your own Android Service. Follow the following steps to modify the Android application we created in Hello World Example chapter −
</string>
    <string name="service5"> Activity main .xml(UI):</string>
    <string name="service6">Activity_next.xml(UI):
It is the layout of next activity:
</string>
    <string name="service7"> My_services.java(Java Class):</string>
    <string name="service8">Main activity,java(Java file):</string>
    <string name="service9"> Next page.java(Java File):</string>
    <string name="service10"> Android Manifest.xml file:</string>
    <string name="service11"> OUTPUT:</string>
    <string name="graphic1"> Graphics:\n
The Android framework offers a variety of graphics rendering APIs for 2D and 3D that interact with manufacturer implementations of graphics drivers, so it is important to have a good understanding of how those APIs work at a higher level. This page introduces the graphics hardware abstraction layer (HAL) upon which those drivers are built.\n
Application developers draw images to the screen in two ways: with Canvas or OpenGL. See System-level graphics architecture for a detailed description of Android graphics components.\n
android.graphics.Canvas is a 2D graphics API and is the most popular graphics API among developers. Canvas operations draw all the stock and custom android.view.Views in Android. In Android, hardware acceleration for Canvas APIs is accomplished with a drawing library called OpenGLRenderer that translates Canvas operations to OpenGL operations so they can execute on the GPU.\n
</string>
    <string name="graphic2"> Android graphics components\n
No matter what rendering API developers use, everything is rendered onto a "surface." The surface represents the producer side of a buffer queue that is often consumed by SurfaceFlinger. Every window that is created on the Android platform is backed by a surface. All of the visible surfaces rendered are composited onto the display by SurfaceFlinger.\n
The following diagram shows how the key components work together:
</string>
    <string name="graphic3"> Android Simple Graphics Example
The android.graphics.Canvas can be used to draw graphics in android. It provides methods to draw oval, rectangle, picture, text, line etc.\n
The android.graphics.Paint class is used with canvas to draw objects. It holds the information of color and style.\n
In this example, we are going to display 2D graphics in android.
</string>
    <string name="graphic4"> activity_main.xml:</string>
    <string name="graphic5"> Activity class:</string>
    <string name="graphic6"> Output:</string>
    <string name="startactivity1"> Android StartActivityForResult:\n
By the help of android startActivityForResult() method, we can get result from another activity.\n
By the help of android startActivityForResult() method, we can send information from one activity to another and vice-versa. The android startActivityForResult method, requires a result from the second activity (activity to be invoked).\n
In such case, we need to override the onActivityResult method that is invoked automatically when second activity returns result.\n
Method Signature\n
There are two variants of startActivityForResult() method.\n
1.	public void startActivityForResult (Intent intent, int requestCode)  \n
2.	public void startActivityForResult (Intent intent, int requestCode, Bundle options)
</string>
    <string name="startactivity2">  Android StartActivityForResult Example\n
Lets see the simple example of android startActivityForResult method.\n
activity_main.xml\n
Drag one textview and one button from the pallete, now the xml file will look like this.
</string>
    <string name="startactivity3"> second_main.xml\n
This xml file is created automatically when you create another activity. To create new activity Right click on the package inside the src -> New -> Other ->Android Activity.\nNow drag one editText, one textView and one button from the pallete, now the xml file will look like this:
</string>
    <string name="popup1"> Android Popup Menu:\n
Android Popup Menu displays the menu below the anchor text if space is available otherwise above the anchor text. It disappears if you click outside the popup menu.\n
The android.widget.PopupMenu is the direct subclass of java.lang.Object class.\n
Android Popup Menu Example:
Let's see how to create popup menu in android.\n
activity_main.xml\n
It contains only one button.
</string>
    <string name="popup2">popup_menu.xml\n
It contains three items as show below. It is created inside the res/menu directory.
</string>
    <string name="popup3"> Activity class\n
It displays the popup menu on button click.
</string>
    <string name="sqilite1"> Android SQLite:
SQLite is an open-source relational database i.e. used to perform database operations on android devices such as storing, manipulating or retrieving persistent data from the database.\n
It is embedded in android bydefault. So, there is no need to perform any database setup or administration task.\n
Here, we are going to see the example of sqlite to store and fetch the data. Data is displayed in the logcat. For displaying data on the spinner or listview, move to the next page.\n
SQLiteOpenHelper class provides the functionality to use the SQLite database.\n
SQLiteOpenHelper class:\n
The android.database.sqlite.SQLiteOpenHelper class is used for database creation and version management. For performing any database operation, you have to provide the implementation of onCreate() and onUpgrade() methods of SQLiteOpenHelper class.\n
Constructors of SQLiteOpenHelper class\n
There are two constructors of SQLiteOpenHelper class.
</string>
    <string name="sqlite2"> Methods of SQLiteOpenHelper class\n
There are many methods in SQLiteOpenHelper class. Some of them are as follows:
    </string>
    <string name="sqlite3"> SQLiteDatabase class\n
It contains methods to be performed on sqlite database such as create, update, delete, select etc.\n
Methods of SQLiteDatabase class\n
There are many methods in SQLiteDatabase class. Some of them are as follows:
</string>
    <string name="sqlite4"> Example of android SQLite database\n
Lets see the simple example of android sqlite database.
</string>
    <string name="sqlite5"> Output:\n
Open Logcat and see the output. It is the basic example of android sqlite without any GUI.
For GUI application with android SQLite, visit next page.
</string>
</resources>